plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.8'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.github.ben-manes.versions' version '0.52.0'
}

group = 'com.hamsetech'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// 스키마는 이제 Flyway가 관리한다. ddl-auto=update + 손으로 쓴 SchemaFixer는
	// 실패해도 조용히 넘어갔고, 무엇이 적용됐는지 기록도 남지 않았다.
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-database-postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.5'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	// 관리자 잔업/특근 엑셀 내보내기. Spring Boot BOM이 관리하지 않아 버전을 명시한다.
	implementation 'org.apache.poi:poi-ooxml:5.4.1'
	// 공지 본문이 리치 텍스트(HTML)가 되면서 저장 전 새니타이징이 필요해졌다.
	// 브라우저에서 거르는 것만으로는 API를 직접 호출하면 그대로 뚫린다.
	implementation 'com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:20240325.1'
  	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
  	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
  	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.5'
	testImplementation 'org.springframework.security:spring-security-test'
	// H2는 빠른 배선 확인(HamsetechApplicationTests)에만 쓴다.
	// 스키마·마이그레이션 검증은 Testcontainers가 실제 PostgreSQL로 한다.
	testRuntimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:postgresql'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	// 실패 원인을 바로 볼 수 있게 한다. 기본 출력은 "몇 개 실패"만 알려줘서
	// 매번 HTML 리포트를 열어야 했다.
	testLogging {
		events 'failed', 'skipped'
		exceptionFormat 'full'
	}
}
